# Digi2PDF

./: .codexignore  .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: build-binaries.yml  ci.yml  refresh-website.yml
packaging/: digi2pdf_entry.py
packaging/macos/: AppIcon.icns
scripts/: build_macos_app.sh  install.ps1  install.sh
src/digi2pdf/: __init__.py  browser.py  cli.py  concurrency.py  credentials.py  imaging.py  models.py  ocr.py  paths.py  preflight.py  session.py  theme.py  tui.py
tests/: test_cli.py  test_concurrency.py  test_credentials.py  test_docs.py  test_imaging.py  test_paths.py  test_preflight.py  test_session.py  test_theme.py  test_tui.py
