[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "digi2pdf"
version = "0.1.0"
description = "Professional cross-platform TUI for exporting owned Digi4School ebooks to PDF."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Johannes Grof" }]
dependencies = [
  "numpy>=2.3.0",
  "pillow>=11.3.0",
  "platformdirs>=4.3.8",
  "questionary>=2.1.0",
  "rich>=14.0.0",
  "selenium>=4.34.0",
]

[project.scripts]
digi2pdf = "digi2pdf.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/digi2pdf"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
